@@ -159,11 +159,5 @@ private:
 
 extern LocalManager *lmgmt;
 
-#if TS_USE_POSIX_CAP
-bool elevateFileAccess(bool);
-#else
-bool restoreRootPriv(uid_t *old_euid = NULL);
-bool removeRootPriv(uid_t euid);
-#endif
 
 #endif /* _LOCAL_MANAGER_H */
