@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 4.1.0
 
+  *) [TS-2261] Add config option to restore/elevate access to reading files by
+   root when loading plugins
+
   *) [TS-2257] Healthcheck plugin can stop watching some events.
 
   *) [TS-2260] Avoid flooding log when log host is down.
